--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
 }
 
 body {
-   background-color: skyblue;
+   background-image: url("images/background.svg");
 }
 
 .main-container {
@@ -51,7 +51,7 @@ body {
 .location-search {
    display: flex;
    justify-content: left;
-   padding-bottom: 15px;
+   padding: 8px 0;
 }
 
 .location-search > input {
@@ -61,17 +61,17 @@ body {
    outline: none;
    border: none;
    width: 25%;
-   font-weight: 300;
+   font-size: 14px;
 }
 
 .location-search > input::placeholder {
    color: white;
-   font-size: 16px;
+   font-size: 14px;
 }
 
 input[type=submit] {
-   width: 28px;
-   height: 28px;
+   width: 27px;
+   height: 27px;
    margin-left: 5px;
    background-color: white;
    background: url("images/searchLocation.svg") no-repeat;
@@ -81,33 +81,43 @@ input[type=submit] {
 }
 
 .weatherDisplay {
-   padding: 15px;
+   margin: 15px 0;
+   padding: 0 20px;
    display: flex;
 }
 
 .wd-left {
-   flex-basis: 70%;
+   flex-basis: 67%;
+}
+
+#location-name{
+   font-size: 1.8rem;
+   margin-bottom: 5%;
+}
+
+#date {
+   font-size: 1rem;
+   margin-bottom: 5%;
 }
 
 #weather-descr {
-   font-size: 1rem;
+   font-size: 1.4rem;
 }
 
 .wd-right {
-   flex-basis: 30%;
+   flex-basis: 33%;
 }
 
 .temp-value {
    position: absolute;
-   bottom: 30px;
+   bottom: 15px;
    right: 20px;
 }
 
 .weatherParams {
-   height: 50%;
+   height: 48%;
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between;
    background-color: white;
    min-height: 260px;
 }
@@ -115,7 +125,7 @@ input[type=submit] {
 .info-items-up, .info-items-down {
    display: flex;
    height: 50%;
-   width: 100%;
+   align-items: center;
 }
 
 .info-item-up-left, 
@@ -123,18 +133,17 @@ input[type=submit] {
 .info-item-down-left, 
 .info-item-down-right {
    flex-basis: 50%;
-   justify-content: center;
-   align-items: center;
    text-align: center;
 }  
 
-.info-item-up-left > h5, 
-.info-item-up-right > h5, 
-.info-item-down-left > h5, 
-.info-item-down-right > h5 {
-   font-size: 18px;
+.info-item-up-left > h3, 
+.info-item-up-right > h3, 
+.info-item-down-left > h3, 
+.info-item-down-right > h3 {
+   font-size: 1.2rem;
    color: #293551;
-   font-weight: 300;
+   margin-bottom: 10%;
+   font-weight: 600;
 }
 
 .info-item-up-left > p, 
@@ -150,7 +159,7 @@ input[type=submit] {
    overflow: auto;
    display: flex;
    flex-direction: column;
-   min-height: 50%;
+   min-height: 48%;
    justify-content: center;
 }
 
@@ -176,11 +185,10 @@ input[type=submit] {
 }
 /* poslednja sekcija sa navigacijom za period za koji želimo da vidimo vremensku prognozu */
 .navigation {
-   height: 10%;
+   height: 12%;
    background-color: #e7e7e8;
    min-height: 55px;
    display: flex;
-   color: #293551;
 }
 
 .navigation > div {
@@ -194,9 +202,10 @@ input[type=submit] {
    align-items: center;
 }
 
-.navigation h5 {
-   margin: 5px 0 0;
-   font-size: 12px;
+.navigation h3 {
+   margin: 5% 0 0;
+   font-size: 0.8rem;
+   color: #293551;
 }
 
 .active-nav {
